# trakt.sync.py

./: .coveragerc  .gitignore  .mailmap  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
examples/: cache.py  klepto_sqlite.py  stash_sqlite.py  sync.py
tests/core/: helpers.py
tests/differ/: test_movie.py  test_show.py
tests/differ/core/: helpers.py
tests/differ/movie/: test_collection.py  test_playback.py  test_ratings.py  test_watched.py
tests/differ/show/: test_collection.py  test_playback.py  test_ratings.py  test_watched.py
tests/fixtures/differ/movie/current/collection/: movies.json
tests/fixtures/differ/show/base/collection/: shows.json
tests/fixtures/differ/show/base/ratings/: seasons.json
tests/fixtures/differ/show/base/watched/: shows.json
tests/fixtures/differ/show/current/collection/: shows.json
tests/fixtures/differ/show/current/ratings/: seasons.json
tests/fixtures/differ/test_movie/base/playback/: movies.json
tests/fixtures/differ/test_movie/current/playback/: movies.json
tests/fixtures/differ/test_movie/current/ratings/: movies.json
tests/fixtures/differ/test_show/base/playback/: episodes.json
tests/fixtures/differ/test_show/base/ratings/: episodes.json  shows.json
tests/fixtures/differ/test_show/current/playback/: episodes.json
tools/: test.py
tools/dump/: dump.py
trakt_sync/cache/: enums.py  main.py
trakt_sync/cache/backends/: __init__.py  klepto_.py  stash_.py
trakt_sync/cache/sources/: list.py  sync.py
trakt_sync/differ/: __init__.py  base.py  movie.py
trakt_sync/sync/: main.py
(+4 files in other folders)
