[metadata]
name = trakt.sync.py
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Sync extension for trakt.py
description-file = README.rst
home-page = https://github.com/fuzeman/trakt.sync.py
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries

[pbr]
skip_changelog = true
skip_git_sdist = 1

[files]
packages =
    trakt_sync

[bdist_wheel]
universal = 1
